<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/baseColor1"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/mainName"
        android:textAlignment="center"
        android:textColor="?attr/baseColorInvert"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:autoLink="none"
        android:autofillHints=""
        android:backgroundTint="?attr/baseColorInvert"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColor="?attr/baseColorInvert"
        android:textColorHint="?attr/baseColorInvert"
        android:textCursorDrawable="@drawable/invert_cursor" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:backgroundTint="?attr/baseColorInvert"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColor="?attr/baseColorInvert"
        android:textColorHint="?attr/baseColorInvert"
        android:textCursorDrawable="@drawable/invert_cursor" />

    <CheckBox
        android:id="@+id/rememberCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:buttonTint="?attr/baseColorInvert"
        android:gravity="center"
        android:text="Remember Me"
        android:textColor="?attr/baseColorInvert" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/baseColor1"
        android:backgroundTint="?attr/baseColor1"
        android:onClick="submitButtonAction"
        android:text="@string/loginButtonText"
        android:textColor="?attr/baseColorInvert"
        android:textColorHint="?attr/baseColor1"
        android:textColorLink="?attr/baseColor1"
        android:textSize="24sp" />

</LinearLayout>

