<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/baseColor1"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ProfileActivityPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:text="@string/nameHint"
        android:textColor="?attr/baseColorInvert"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="Email"
        android:textColor="?attr/baseColorInvert" />

    <TextView
        android:id="@+id/phoneField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/phoneHint"
        android:textColor="?attr/baseColorInvert" />

    <TextView
        android:id="@+id/sectionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/sectionHint"
        android:textColor="?attr/baseColorInvert" />

    <TextView
        android:id="@+id/dateField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/birthDateHint"
        android:textColor="?attr/baseColorInvert" />

    <Button
        android:id="@+id/button2"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:background="?attr/baseColor1"
        android:onClick="editProfileAction"
        android:text="Edit Profile"
        android:textColor="?attr/baseColorInvert" />

    <Button
        android:id="@+id/button3"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:background="?attr/baseColor1"
        android:onClick="changePasswordAction"
        android:text="Change Password"
        android:textColor="?attr/baseColorInvert" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:background="?attr/baseColor1"
        android:onClick="changeProfilePicture"
        android:text="Change Profile Picture"
        android:textColor="?attr/baseColorInvert" />

</LinearLayout>
